--- a/template/roster-item.hbs
+++ b/template/roster-item.hbs
@@ -4,6 +4,7 @@
    <div class="jsxc-bar__caption jsxc-grow">
       <div title="{{jid}}" class="jsxc-bar__caption__primary">{{name}}</div>
       <div title="{{lastMessage}}" class="jsxc-bar__caption__secondary">{{lastMessage}}</div>
+      <div title="{{tag}}" class="jsxc-bar-tags"></div>
    </div>
 
    <div class="jsxc-menu jsxc-bar__action-entry jsxc-menu--vertical-left jsxc-menu--light">
