--- a/template/vcard.hbs
+++ b/template/vcard.hbs
@@ -7,6 +7,9 @@
    <li data-resource="{{resource}}">
       <strong>{{t "Client"}}</strong> <span class="jsxc-client">{{client}}</span>
    </li>
+   <li class="jsxc-vcard-tags">
+      <strong>{{t "Tags"}}</strong>
+   </li>
    <li class="jsxc-separator">
       <strong>{{t "Status"}}</strong> {{presence}}
    </li>
