--- a/template/roster.hbs
+++ b/template/roster.hbs
@@ -5,29 +5,33 @@
          data-presence-offline-label="{{t "You_are_currently_offline"}}"></ul>
    </div>
    <div class="jsxc-roster-status"></div>
-   <div class="jsxc-bottom jsxc-presence jsxc-roster-item jsxc-bar" data-bid="own">
-      <div class="jsxc-avatar jsxc-shrink--no"></div>
-      {{#> menu
-        classes="jsxc-menu--pushup jsxc-grow jsxc-js-presence-menu"
-        button-label=(t "Offline")}}
-            <li data-presence="online" class="jsxc-online jsxc-offline-available">{{t "Online"}}</li>
-            <li data-presence="chat" class="jsxc-chat">{{t "Chatty"}}</li>
-            <li data-presence="away" class="jsxc-away">{{t "Away"}}</li>
-            <li data-presence="xa" class="jsxc-xa">{{t "Extended_away"}}</li>
-            <li data-presence="dnd" class="jsxc-dnd">{{t "dnd"}}</li>
-            <li data-presence="offline" class="jsxc-offline">{{t "Offline"}}</li>
-      {{/menu}}
+   <div class="jsxc-real-bottom">
+       <div class="jsxc-bottom jsxc-presence jsxc-roster-item jsxc-bar" data-bid="own">
+          <div class="jsxc-avatar jsxc-shrink--no"></div>
+          {{#> menu
+            classes="jsxc-menu--pushup jsxc-grow jsxc-js-presence-menu"
+            button-label=(t "Offline")}}
+                <li data-presence="online" class="jsxc-online jsxc-offline-available">{{t "Online"}}</li>
+                <li data-presence="chat" class="jsxc-chat">{{t "Chatty"}}</li>
+                <li data-presence="away" class="jsxc-away">{{t "Away"}}</li>
+                <li data-presence="xa" class="jsxc-xa">{{t "Extended_away"}}</li>
+                <li data-presence="dnd" class="jsxc-dnd">{{t "dnd"}}</li>
+                <li data-presence="extended-status" class="jsxc-extended-status">{{t "extended-status"}}</li>
+                <li data-presence="offline" class="jsxc-offline">{{t "Offline"}}</li>
+          {{/menu}}
 
-      {{> menu classes="jsxc-menu--pushup jsxc-js-notice-menu" button-classes="jsxc-bounce"}}
+          {{> menu classes="jsxc-menu--pushup jsxc-js-notice-menu" button-classes="jsxc-bounce"}}
 
-      <div class="jsxc-menu jsxc-menu--pushup jsxc-js-main-menu">
-         <div class="jsxc-menu__button jsxc-icon--clickable">
-            <i class="jsxc-icon-menu jsxc-icon--center"></i>
-         </div>
-         <div class="jsxc-menu__content">
-            <ul></ul>
-         </div>
-      </div>
+          <div class="jsxc-menu jsxc-menu--pushup jsxc-js-main-menu">
+             <div class="jsxc-menu__button jsxc-icon--clickable">
+                <i class="jsxc-icon-menu jsxc-icon--center"></i>
+             </div>
+             <div class="jsxc-menu__content">
+                <ul></ul>
+             </div>
+          </div>
+       </div>
    </div>
    <div class="jsxc-roster-toggle"></div>
 </div>
+
