fix vcard parsing into list old implementation did not parse correctly all data into the list for template creation

--- a/template/vcard.hbs
+++ b/template/vcard.hbs
@@ -1,5 +1,5 @@
-<h3>{{t "Info_about"}} {{name}} ({{jid}})</h3>
-<ul class="jsxc-vcard">
+<h3 style="margin-bottom: 65px;">{{t "Info_about"}} {{name}} ({{jid}})</h3>
+<ul class="jsxc-vcard-result-clients">
    {{#each basic}}
    <li>
       <strong>{{t "Resource"}}</strong> {{resource}}
