--- a/scss/partials/_dialog.scss
+++ b/scss/partials/_dialog.scss
@@ -10,6 +10,35 @@
   z-index: 999;
 }
 
+.jsxc-vcard-result-clients {
+
+  li:nth-child(3n-2) {
+    border-top: 1px dashed var(--jsxc-color-border-dark);
+  }
+
+  li:nth-child(3n) {
+    margin-bottom:20px;
+    border-bottom: 1px dashed var(--jsxc-color-border-dark);
+  }
+}
+
+.jsxc-vcard-result {
+
+  margin-bottom:10px !important;
+
+  li > strong {
+    min-width: 150px;
+    display: inline-block;
+  }
+
+  li > strong:empty {
+    display: none;
+  }
+  
+  li:nth-child(even) {background: var(--jsxc-color-background)}
+  li:nth-child(odd) {background: var(--jsxc-color-background-darker)}
+}
+
 .jsxc-dialog {
   background: $main-bg;
   border: 1px solid $bg-darker;
