XEP 191 Blocking Commands - Add menu to manage block list
- Todo: create handler to handle results from managed jids to
  > enable/disable (un)blocked Buddys in Roster
  > disable the ability to write in allready opened Chatwindows if blocked

--- a/scss/partials/_roster.scss
+++ b/scss/partials/_roster.scss
@@ -363,3 +363,8 @@ li.jsxc-hide-offline {
     }
   }
 }
+
+.jsxc-rosteritem-disabled .jsxc-bar__caption__primary {
+  text-decoration: line-through;
+  color: var(--jsxc-color-error);
+}
